k8s/postgresql-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginsignup-db
  namespace: loginsignup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginsignup-db
  template:
    metadata:
      labels:
        app: loginsignup-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loginsignup-db
  namespace: loginsignup
spec:
  selector:
    app: loginsignup-db
  ports:
    - port: 5432
      targetPort: 5432
